# ResearchBob

./: .gitignore  README.md  pyproject.toml  test.txt
.github/workflows/: ai-review.yml
docs/: local-automation-usage.md
docs/superpowers/plans/: 2026-03-31-arxiv-research-scout-phase-1.md  2026-04-02-automation-pipeline.md  2026-04-02-full-analysis-pipeline.md  2026-04-03-github-issue-intake.md  2026-04-03-issue-auto-close-after-summary.md  2026-04-03-issue-intake-profile-fallback.md  2026-04-04-finalize-github.md  (+2 more)
research-workspace/papers/: registry.jsonl
research-workspace/pipeline/: run-history.jsonl
research-workspace/profile/: interest-profile.md
scripts/: daily_pipeline.py
skills/paper-intake-and-normalize/: SKILL.md
skills/paper-review-simulator/: SKILL.md
skills/problem-solution-extractor/: SKILL.md
skills/report-composer/: SKILL.md
skills/research-interest-profile/: SKILL.md
src/auto_research/: analysis.py  arxiv.py  automation.py  bilingual.py  cli.py  env.py  extraction.py  github_intake.py  intake.py  longterm.py  models.py  openai_client.py  pdf.py  profile.py  registry.py  report.py  retrieval.py  ris.py  search_profile.py  selection.py  state.py  summary.py  workspace.py
tests/: test_arxiv.py  test_automation.py  test_bilingual.py  test_cli_smoke.py  test_env.py  test_extraction.py  test_github_intake.py  test_openai_client.py  test_pdf.py  test_profile.py  test_report.py  test_retrieval.py  test_search_profile.py  test_state.py  test_workspace.py
tests/fixtures/: arxiv_feed.xml  interest_profile.md  problem_solution.md
(+194 files in other folders)
