[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-research"
version = "0.1.0"
description = "Phase 1 tooling for the ArXiv Research Scout skill suite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<0.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1,<9.0",
  "ruff>=0.11,<0.12",
]

[project.scripts]
auto-research = "auto_research.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
